# rdm-cppserver

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  LICENSE  README.md
cmake/: Findcpp-redis.cmake  Findinih.cmake  Findmongocxx.cmake  Findmysqlcppconn.cmake  Findyaml-cpp.cmake.ignore
config/: README.md  all.yaml  chat_room.yaml  chat_room_service.yaml  master.yaml
game/api_service/: ApiService.cpp  ApiService.h  CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  MessageType.h  User.cpp  User.h  WebCommand.cpp  WebCommand.h  main.cpp
game/chat_server/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  ChatServer.cpp  ChatServer.h  MessageType.h  WebCommand.cpp  WebCommand.h  main.cpp
game/client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
game/login_server/: CMakeLists.txt
game/manager_server/: CMakeLists.txt
game/master_server/: CMakeLists.txt  Client.h  MasterServer.cpp  MasterServer.h  main.cpp
game/protocol/: MessageType.h
game/service_server/: ApiServer.cpp  ApiServer.h  CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  ChatServer.cpp  ChatServer.h  main.cpp
src/benchmark/: CMakeLists.txt  main.cpp
src/benchmark_usage/: CMakeLists.txt
src/boost/: CMakeLists.txt  echo_client.h  echo_server.h  main.cpp
src/boost_usage/: CMakeLists.txt  echo_client.h
src/coding_interview/: 01_AssignmentOperator.cpp  02_Singleton.cpp  03_01_DuplicationInArray.cpp  CMakeLists.txt
src/game_server/: CMakeLists.txt  main.cpp
src/hello_world/: CMakeLists.txt  main.cpp
src/imgui_opengl3/: CMakeLists.txt  example.cpp  main.cpp
src/leetcode/: CMakeLists.txt  README.md
src/leetcode/二叉树/: 遍历.cpp
src/ping_tool/: CMakeLists.txt  main.cpp
src/rdm/: BM.cpp  CMakeLists.txt  Version.h
src/rdm/base/: static_assert.h
src/rdm/chrono/: Hardware.h
src/rdm/chrono/test/: HardwareTest.cpp
src/rdm/command/: Command.cpp  Command.h  Console.cpp  Console.h  Options.cpp  Options.h
src/rdm/command/test/: CommandTest.cpp  ConsoleTest.cpp  ConsoleTtest.cpp  Options.cpp
src/rdm/config/: BaseConfig.h  BaseConfigMgr.cpp  BaseConfigMgr.h  IniConfig.cpp  IniConfig.h  JsonConfig.cpp  JsonConfig.h  ServerNetConfig.cpp  ServerNetConfig.h  XmlConfig.cpp  XmlConfig.h  YamlConfig.cpp  YamlConfig.h
src/rdm/config/test/: IniConfigTest.cpp  JsonConfigTest.cpp  Property.ini  Property.json  Property.xml  XmlConfigTest.cpp  YamlConfigTest.cpp  test.json  test.xml  test.yaml
src/rdm/container/: Merge.h  SortedSet.cpp  SortedSet.h  SparseByteSet.h
src/rdm/container/test/: MergeBM.cpp  MergeTest.cpp  SparseByteSetBM.cpp
src/rdm/core/: NonCopyable.h  Observable.h  Observer.h
src/rdm/core/test/: ObserverTest.cpp
src/rdm/database/mongo/: MongoHeader.h
src/rdm/database/mongo/test/: MongoTest.cpp
src/rdm/database/mysql/: DBClient.cpp  DBClient.h  DBConnection.cpp  DBConnection.h  DBConnectionPool.cpp  DBConnectionPool.h  DBDriver.cpp  DBDriver.h  DBServiceManager.cpp  DBServiceManager.h  IDBConnection.h
src/rdm/database/mysql/test/: DBConnectionPoolTest.cpp  DBConnectionTest.cpp  DBDriverTest.cpp  DBMysqlTest.cpp  DBServiceManagerTest.cpp
src/rdm/database/redis/test/: RedisTest.cpp
src/rdm/log/: Logger.cpp  Logger.h
src/rdm/log/test/: LoggerTest.cpp
src/rdm/message/: Codec.h  FixedSizeMsg.cpp  FixedSizeMsg.h  MsgEnum.h  ProtoMsg.h  ProtobufMsg.cpp  ProtobufMsg.h  Text.h
src/rdm/message/proto/: Person.pb.cc  Person.pb.h  Person.proto  server_info.pb.cc  server_info.pb.h
src/rdm/message/test/: Codec_test.cpp  FixedSizeMsgTest.cpp  ProtoMsgTest.cpp  ProtobufMsgTest.cpp  TextTest.cpp
src/rdm/module/: DataModule.h  MessageModule.h
src/rdm/net/: HeartBeat.cpp  HeartBeat.h  Net.cpp  Net.h  NetAcceptor.cpp  NetAcceptor.h  NetClient.cpp  NetClient.h  NetClientManager.cpp  NetClientManager.h  NetConnection.cpp  NetConnection.h  NetConnectionManager.cpp  NetConnectionManager.h  NetManager.cpp  NetManager.h  NetMsg.cpp  NetMsg.h  NetServer.cpp  NetServer.h  TCPListener.cpp  TCPListener.h  TcpConn.cpp  TcpConn.h  TcpConnContainer.cpp  TcpConnContainer.h  TcpListener.cpp  TcpListener.h
src/rdm/net/test/: HeartBeatTest.cpp  NetAcceptorTest.cpp  NetConnectionManagerTest.cpp  NetConnectionTest.cpp  NetManagerTest.cpp
src/rdm/net_v2/: TransportLayer.h
src/rdm/observer/: MessageSubject.cpp  MessageSubject.h  Observer.h  Subject.h
src/rdm/protocol/: command.pb.cc  command.pb.h  server_info.pb.cc  server_info.pb.h
src/rdm/service/: Service.cpp  Service.h
src/rdm/status/: Status.cpp  Status.h
src/rdm/stdx/: chrono.h  mutex.h
src/rdm/submodule/: CMakeLists.txt  SubClass.h
src/rdm/thread/: ThreadPool.cpp  ThreadPool.h  ThreadUtil.cpp  ThreadUtil.h
src/rdm/thread/test/: ThreadPoolTest.cpp  ThreadUtilTest.cpp
src/rdm/timer/: Ticker.cpp  Ticker.h  TickerManager.cpp  TickerManager.h  Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h
src/rdm/timer/test/: TickerManagerTest.cpp  TickerTest.cpp  TimerManagerTest.cpp  TimerTest.cpp
src/rdm/util/: DebugPrint.cpp  DebugPrint.h  ExceptionHandle.cpp  ExceptionHandle.h  Exit.h  ExitCode.h  FileSystem.cpp  FileSystem.h  Random.cpp  Random.h  StringUtil.cpp  StringUtil.h  System.cpp  System.h  Time.cpp  Time.h
src/rdm/util/test/: DebugPrintTest.cpp  FileSystemTest.cpp  RandomTest.cpp  StringUtilTest.cpp  SystemTest.cpp  TimeTest.cpp
src/test/: CMakeLists.txt  main.cpp
tool/protoc-3.12.0/protocol/: build_cpp.bat
tool/protoc-3.12.0/protocol/proto/: command.proto
tool/protoc/protocol/: build_cpp.bat  build_csharp.bat
tool/protoc/protocol/proto/: server_info.proto
